<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/scrollViewContainer"
        xmlns:fresco="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/ivDetailIconApp"
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:layout_gravity="center"
                    fresco:roundedCornerRadius="4dp"
                    fresco:roundBottomLeft="true"
                    fresco:roundBottomRight="true"
                    android:scaleType="centerCrop"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tvDetailAppName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#616161"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="5dp"
                        android:textSize="18sp"
                        tools:text="APP"/>

                    <TextView
                        android:id="@+id/tvDetailAppMadeBy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:textSize="12sp"
                        tools:text="By Apple"/>
                    <TextView
                        android:id="@+id/tvDetailAppCost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textAllCaps="true"
                        android:paddingTop="20dp"
                        android:paddingRight="16dp"
                        android:textSize="12sp"
                        tools:text="FREE"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitleDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/description_app"
                    android:textSize="18sp"
                    android:paddingLeft="16dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="12dp"
                    android:textColor="#616161"
                    tools:text="Description"/>
                <TextView
                    android:id="@+id/tvDetailDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp"
                    android:paddingBottom="8dp"
                    android:ellipsize="end"
                    android:maxLines="4"
                    tools:text="Lorem ipsum test about lorem ipsumLorem ipsum test about lorem ipsumLorem ipsum test about lorem ipsumLorem ipsum test about lorem ipsumLorem ipsum test about lorem ipsum"/>
                <TextView
                    android:id="@+id/tvShowMore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/read_more"
                    android:padding="12dp"
                    tools:text="Read more"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tvCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/app_category"
                        android:padding="16dp"
                        tools:text="Category: Education"/>
                    <TextView
                        android:id="@+id/tvAppType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/app_type"
                        android:paddingRight="16dp"
                        tools:text="Application"/>
                </LinearLayout>

                <Button
                    android:id="@+id/btnGoItunesStore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:padding="12dp"
                    android:text="@string/go_to_web"
                    android:layout_gravity="center"
                    tools:text="Go to itunes store"/>
                <TextView
                    android:id="@+id/tvRights"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/rights"
                    android:paddingTop="46dp"
                    android:paddingRight="26dp"
                    tools:text="© 2016 Apple Inc."/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>