<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/ivCoverApp"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="centerInside"
            fresco:roundBottomLeft="true"
            fresco:roundBottomRight="true"
            fresco:roundedCornerRadius="4dp"/>

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/ivDetailIconApp"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:scaleType="centerCrop"
            fresco:roundBottomLeft="true"
            fresco:roundBottomRight="true"
            fresco:roundedCornerRadius="4dp"
            android:paddingLeft="16dp"
            fresco:layout_constraintBottom_toBottomOf="@+id/ivCoverApp"
            fresco:layout_constraintTop_toBottomOf="@+id/ivCoverApp"
            android:paddingTop="16dp"/>

        <TextView
            android:id="@+id/tvDetailAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:textColor="#616161"
            android:textSize="18sp"
            fresco:layout_constraintLeft_toRightOf="@+id/ivDetailIconApp"
            fresco:layout_constraintTop_toBottomOf="@+id/ivCoverApp"
            tools:layout_editor_absoluteX="95dp"
            tools:text="APP" />

        <TextView
            android:id="@+id/tvDetailAppMadeBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textSize="12sp"
            fresco:layout_constraintLeft_toRightOf="@+id/ivDetailIconApp"
            fresco:layout_constraintTop_toBottomOf="@+id/tvDetailAppName"
            tools:text="By" />

        <TextView
            android:id="@+id/tvTitleDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingBottom="12dp"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:text="@string/description_app"
            android:textColor="#616161"
            android:textSize="18sp"
            android:visibility="invisible"
            fresco:layout_constraintTop_toBottomOf="@+id/ivDetailIconApp"
            tools:text="Description" />

        <TextView
            android:id="@+id/tvDetailDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:maxLines="4"
            android:paddingBottom="8dp"
            android:paddingLeft="26dp"
            android:paddingRight="26dp"
            fresco:layout_constraintTop_toBottomOf="@+id/tvTitleDescription"
            tools:text="Lorem ipsum test about lorem ipsumLorem ipsum test about lorem ipsumLorem ipsum test about lorem ipsumLorem ipsum test about lorem ipsumLorem ipsum test about lorem ipsum" />

        <TextView
            android:id="@+id/tvShowMore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/read_more"
            android:textAllCaps="true"
            android:visibility="invisible"
            fresco:layout_constraintTop_toBottomOf="@+id/tvDetailDescription"
            tools:text="Read more" />


        <TextView
            android:id="@+id/tvAppType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingLeft="10dp"
            android:paddingRight="16dp"
            fresco:layout_constraintLeft_toRightOf="@+id/ivDetailIconApp"
            fresco:layout_constraintTop_toBottomOf="@+id/tvDetailAppMadeBy"
            tools:text="Application" />

        <Button
            android:id="@+id/btnGoToWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:padding="12dp"
            android:text="@string/go_to_web"
            android:visibility="invisible"
            fresco:layout_constraintLeft_toRightOf="parent"
            fresco:layout_constraintRight_toRightOf="parent"
            fresco:layout_constraintTop_toBottomOf="@+id/tvShowMore"
            tools:text="Go to website" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>

